# minijsc

./: .clang-format  .clang-tidy  .clang-tidy.ignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md
gc/: gc.c
include/: AST.h  ASTOptimizer.h  Bytecode.h  BytecodeCompiler.h  IR.h  Interpreter.h  JSCallable.h  JSLexer.h  JSParser.h  JSRuntime.h  JSToken.h  JSValue.h  Jit.h  Lexer.h  Runtime.h  Token.h  VM.h
src/lib/: ASTOptimizer.cpp  Bytecode.cpp  BytecodeCompiler.cpp  CMakeLists.txt  Interpreter.cpp  JSLexer.cpp  JSParser.cpp  JSToken.cpp  Lexer.cpp  Token.cpp  VM.cpp
tests/: main.cpp
tests/integration/: add.js
